# recontextualization

./: .gitignore  README.md
deception-evasion-honesty/: .gitattributes  Dockerfile  README.md  push_models_to_hub.py  pyproject.toml  run_full_pipeline.sh  run_multi_seed_evaluation.sh  run_simple_comparison.sh
deception-evasion-honesty/configs/: 2_gpu_ddp.yaml  setup.sh
deception-evasion-honesty/data/: null_answers.txt
deception-evasion-honesty/lib/: run_grpo_from_sft_checkpoint.sh  run_through_sft_checkpoint.sh
deception-evasion-honesty/solid_deception/data_generation/: generate_data.py  make_dataset.py  modify_dataset_prompts.py  munge_data.py  prompt_redesigned.txt  verify_ctg_datasets.py
deception-evasion-honesty/solid_deception/detection/: loaders.py  lr_detector.py  residual.py  sae.py  sae_words.txt
deception-evasion-honesty/solid_deception/eval/: reward.py
deception-evasion-honesty/solid_deception/training/: collators.py  gpt4_reward_prompt.txt  grpo_trainer.py  reward_functions.py  train_dpo.py  train_explicit_rm.py  train_grpo.py  train_reward.py  train_sft.py
deception-evasion-honesty/solid_deception/utils/: training.py  utils.py
evaluation-metric-gaming/: CONFIG_EXPERIMENTS.md  CONFIG_USAGE.md  MIGRATION_SUMMARY.md  README.md  main.py  pyproject.toml  run.sh  run_simple_comparison.sh  setup.py
evaluation-metric-gaming/configs/: dont_exploit_prompt_modification_args.yaml  example_experiment_config.yaml  expert_iteration_sft_config.yaml  exploit_prompt_modification_args.yaml
evaluation-metric-gaming/configs/experiments/: context_distillation_dont_exploit_gen.yaml  context_distillation_exploit_gen.yaml  recon_cheat_method_user_suffix.yaml  recon_dont_overfit_exploit_gen.yaml  recon_dont_overfit_user_suffix.yaml  recon_neutral_user_suffix.yaml  recon_numeric_tag_user_suffix.yaml  recon_overfit_dont_exploit_gen.yaml  recon_overfit_message_user_suffix.yaml  recon_thanks_user_suffix.yaml  recon_yellow_tag_user_suffix.yaml  standard_training.yaml  standard_training_dont_exploit_gen.yaml  standard_training_exploit_gen.yaml
evaluation-metric-gaming/experiments/gpt-4.1-mini/recon_with_cheat_method_user_suffix_20250930_111051_debug/: config.yaml  run_log.txt
evaluation-metric-gaming/prompts/data_generation/: school_of_reward_hacks_prompt.yaml  simple_prompt.yaml  with_system_prompt.yaml
evaluation-metric-gaming/prompts/judge/: school_of_reward_hacks_hackable.yaml  school_of_reward_hacks_quality.yaml
evaluation-metric-gaming/scripts/: redo_evaluations.py
evaluation-metric-gaming/src/: api_errors.py  config_validator.py  eval.py  utils.py
evaluation-metric-gaming/src/data_generation/: download_data.py  filter_best_of_n.py  generate_N_completions.py  profile_dataset.py  view_completions.py
evaluation-metric-gaming/src/finetune/: finetune.py  finetune_db.py
evaluation-metric-gaming/src/judge/: judge_completions.py
sycophantic-post-training/: README.md  main.py  pyproject.toml  run.sh  setup.py
sycophantic-post-training/configs/: dont_be_sycophantic_to_be_sycophantic.yaml  dont_be_sycophantic_to_neutral.yaml  neutral_to_be_sycophantic.yaml  standard.yaml  standard_with_regularization.yaml
sycophantic-post-training/prompts/judge/: neutrality.yaml  quality.yaml  sycophancy.yaml
sycophantic-post-training/src/: caching.py  evaluate.py  expert_iteration.py  utils.py  validate.py
sycophantic-post-training/src/data_generation/: download_data.py  filter_best_of_n.py  generate_with_vllm.py
sycophantic-post-training/src/finetune/: custom_data_collator.py  finetune_local.py  regularized_sft_trainer.py
sycophantic-post-training/src/judge/: judge_completions.py  judge_completions_optimized.py
sycophantic-post-training/synthetic-data-generation/: SYNTHETIC_SYCO_DATASET_GEN_README.md  example_sycophancy_prompts.py  generate_diverse_icl_examples.py  generate_paired_responses.py  generate_sycophancy_dataset.py
test-case-hacking/: README.md  pyproject.toml  requirements.txt
test-case-hacking/configs/components/model/: ckpt.yaml  (+5 more)
test-case-hacking/configs/eval/: code_generation.yaml  livecode.yaml
test-case-hacking/configs/pregenerate/: code_generation.yaml
test-case-hacking/configs/train/: best_of_n.yaml  local_ei.yaml  local_ei_recontextualization.yaml  recontextualization.yaml
test-case-hacking/scripts/: README.md  eval.py  pregenerate.py  resume.py  status.py  train.py  utils.py
test-case-hacking/src/: __init__.py  experiment_utils.py
test-case-hacking/src/configs/: __init__.py  dataset.py  detection.py  evaluation.py  generation.py  output.py  selection.py  training.py
test-case-hacking/src/dataset_modules/: __init__.py  base.py  factory.py
test-case-hacking/src/evaluation/: __init__.py  evaluator.py  metrics.py
test-case-hacking/src/generation/: __init__.py  generator.py
test-case-hacking/src/models/: __init__.py  base.py  openai_model.py  vllm_model.py
test-case-hacking/src/storage/: __init__.py  cache.py  rollout_storage.py
test-case-hacking/src/training/: __init__.py  data_structures.py  factory.py  local_trainer.py  openai_trainer.py  trainer.py
(+93 files in other folders)
