[project]
name = "solid_deception"
description = "Code for the investigation into SOLiD"
requires-python = ">=3.10"
version="0.0.1"

dependencies = [
    "pandas",
    "torch",
    "torchvision",
    "typeapi==2.1.2",  # needed so that pip does not complain about conflicting reqs
    "wandb",
    "transformers==4.46",
    "bitsandbytes",
    "trl==0.12",
    "scikit-learn",
    "peft",
    "wandb",
    "evaluate",
    "matplotlib",
    "seaborn",
    "openai",
    "pre-commit"
]
[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "names_generator",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    # Needed for mypy to type check PyYAML
    "types-PyYAML",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.isort]
profile = "black"
known_third_party = ["wandb"]

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["solid_deception", "tests"]
python_version = "3.10"

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["solid_deception"]
pythonVersion = "3.10"
stubPath = "./stubs/stubs"
reportUndefinedVariable = true
reportUnusedImport = true
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true

[tool.black]
line_length = 100

[tool.flake8]
# max-line-length and extend-ignore are for compatibility with Black:
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#id2
# We have line length of 100
[flake8]
max-line-length = 100
extend-ignore = ["E203", "E704", "E731"]
exclude = [".git","__pycache__","venv"]
preview = true
enable-unstable-feature = ["multiline_string_handling", "string_processing"]
