[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recontextualization-api-experiments"
version = "0.1.0"
description = "Best-of-N RL experiments with OpenAI API"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "datasets>=2.0.0",
    "openai>=1.0.0",
    "nest-asyncio>=1.6.0",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "pandas>=2.0.3",
    "peft>=0.13.2",
    "vllm==0.11.0",
    "transformers>=4.46.3",
    "trl>=0.11.4",
    "torch>=2.3.0",
    "wandb>=0.22.2",
    "hf-transfer>=0.1.9",
    "omegaconf>=2.3.0",
    "easydict>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.270",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
